@@ -1,3 +1,9 @@
+2005-10-11  Kouhei Sutou  <kou@cozmixng.org>
+
+	* packages/cairo/ext/rb_cairo_text_extents.c:
+	  - Removed Cairo::TextExtents.new
+	  - Added Cairo::TextExtents#to_s
+
 2005-10-10  Kouhei Sutou  <kou@cozmixng.org>
 
 	* packages/cairo/ext/rb_cairo_constants.c: Supported all constants.
